objects/GRP_CC_Group__c.object
<CustomObject>
    <description>GRP_CC Connected Customer Application Object</description>
    <fields>
        <fullName>GRP_CC_Domain__c</fullName>
        <inlineHelpText>Contains the group domain&apos;s in Drupal</inlineHelpText>
        <label>Domain</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_GroupeResponsible__c</fullName>
        <inlineHelpText>This field must be filled in with the customer global manager in order to allow him to monitor its group venues&apos; activity in the platform</inlineHelpText>
        <label>Group Responsible Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_ParentGroup__c</fullName>
        <label>ParentGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Parent_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Group</label>
        <referenceTo>GRP_CC_Group__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GRP_CC_Parent_Group__c</columns>
        <columns>GRP_CC_GroupeResponsible__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>GRP_CC_Domain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>